maze.lessons.maze.island.IslandMaze.scala.error
Escaper:7: error: not found: value get
    if (get())
        ^